--- a/analysis/index.html
+++ b/analysis/index.html
@@ -241,7 +241,7 @@ pinnacle 2.38 3.44 2.86
     </div>
   </div>
 
-  <div id="main3" style="display:none;">
+  <div id="main3" style="display:block;">
     <div class="grid">
       <div class="field">
         <label id="main3LabelH">홈 배당</label>
@@ -353,7 +353,7 @@ pinnacle 2.38 3.44 2.86
 </template>
 
 
-<script src="../assets/js/inline-bundles/b.analysis.v43.lite.js"></script>
+<script src="/assets/js/inline-bundles/b.analysis.v43.lite.js"></script>
 
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 <script>
