--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <title>88ST | 스포츠 배당 분석기 · EV/마진 · 켈리 계산기</title>
 <meta content="스포츠 배당 분석기(오버라운드·마진·EV·공정배당) + 켈리 비중 계산기, 슬롯 RTP 분석, 카지노 전략/미니게임 가이드를 한 곳에서 빠르게 확인하세요." name="description"/>
-<meta content="스포츠 배당 분석기, 배당 마진 계산기, 오버라운드 계산기, EV 계산기, 공정배당 계산기, 공정확률, 켈리 공식 계산기, 배당 확률 변환기, 슬롯 RTP 분석기, 바카라 전략 계산기, 미니게임 분석기, 입플 체크리스트, 인증사이트" name="keywords"/>
+<meta content="스포츠 배당 분석기, 배당 마진 계산기, 오버라운드 계산기, EV 계산기, 공정배당 계산기, 공정확률, 켈리 공식 계산기, 배당 확률 변환기, 슬롯 RTP 분석기, 바카라 전략 계산기, 미니게임 분석기, 입플 체크리스트, 인증사이트, 88 커뮤니티, 팔팔커뮤니티" name="keywords"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
