--- a/ipl/index.html
+++ b/ipl/index.html
@@ -43,16 +43,13 @@
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <meta content="/img/logo.png" property="og:image"/></head>
 <body>
-<div class="scam-popup" id="scamPopup">
+<div class="scam-popup" id="scamPopup" role="region" aria-label="사칭 주의 안내">
 <div class="scam-box">
-<h3>⚠️ 사칭 주의 안내</h3>
-<p>
-      88 커뮤니티 공식 관리자 텔레그램은<br/>
-<b>@UZU59</b> 단 하나입니다.<br/><br/>
-      그 외 계정은 사칭일 수 있으니<br/>
-      반드시 주의해 주세요.
-    </p>
-<div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
+  <div class="scam-left">
+    <div class="scam-ic">⚠</div>
+    <div class="scam-msg"><b>사칭 주의</b> · 공식 관리자 텔레그램은 <b>@UZU59</b> 단 하나입니다. 다른 계정 주의</div>
+  </div>
+  <div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
 </div>
 </div>
 <div class="wrap st-guide" role="main">
